@@ -6,6 +6,10 @@
 	<string>179 113 512 264 0 0 1280 1002 </string>
 	<key>IBFramework Version</key>
 	<string>291.0</string>
+	<key>IBOpenObjects</key>
+	<array>
+		<integer>18</integer>
+	</array>
 	<key>IBSystem Version</key>
 	<string>6L60</string>
 </dict>
